fixed minor styling bleed issue and changed text from more info to game info

--- a/src/components/Games/Games.css
+++ b/src/components/Games/Games.css
@@ -18,6 +18,8 @@
 }
 
 #gameName {
+  display: flex;
+  justify-content: center;
   padding: 0.1em;
   margin-bottom: 0;
   font-size: 1.5em;
